--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
     environment:
       - VIRTUAL_HOST=dgocode.com
       - LETSENCRYPT_HOST=dgocode.com
-      - LETSENCRYPT_EMAIL=ldxnotes@gmail.com
+      - LETSENCRYPT_EMAIL=me@dgocode.com
     depends_on:
       - nginx-proxy
       - letsencrypt
